# paracelso_wp32

./: .gitignore  CV_2019-2021_ski.clahe.tiff.aux.xml  CV_2019-2021_ski.lognorm.tiff.aux.xml  CV_2019-2021_ski.zscore.tiff.aux.xml  LICENCE  MANIFEST.in  OpenCVOpticalFlow_parms.json  README.md  README_it.md  README_new.md  README_ot.md  README_prisma.md  README_sentinel.md  README_snap.md  SkiOpticalFlowILK_parms.json  SkiOpticalFlowTVL1_parms.json  SkiPCC_Vector_parms.json  __init__.py  activate.bat  corvara.bat  deactivate.bat  example_offset_tracking.bat  example_s1_preprocessing.bat  install.bat  log.py  log.txt  output.tif  pyproject.toml  requirements.txt  run_all.ps1  run_calita.ps1  run_corvara.ps1  run_examples.bat  simple_ot.bat  tmp.tif
cosmo/: lib.py  naming.py  utils.py
csk/: lib.py  naming.py  utils.py
graphs/: cosmo_scs-b_default.xml  csg_scs-b_default.xml  prep_s1_grd_default.xml  prep_s1_slc_default+band3.xml  prep_s1_slc_default.xml  prep_s1_slc_noSpeckleFilter+band3.xml  s1_slc_processing_2bands.xml  s1_slc_processing_3bands.xml  s2_l2a_default.xml
log/: __init__.py
ot/: OPENCVOF.yaml  SKIOFILK.yaml  SKIOFTVL1.yaml  SKIPCCV.yaml  __init__.py  algoritmi.py  cli.py  coreg.py  helpmsg.py  image_processing.py  interfaces.py  lib.py  main.py  metodi.py  normalize.py  opencvof.py  skiofilk.py  skioftvl1.py  skipccv.py  utils.py
paper/: paper.bib  paper.md
prs/: convert.py
s1/: config.py  lib.py  preprocessing.py  sarprep_config.yaml
scripts_notebook/: OpenCVOpticalFlow_parms.json  SKIOFTVL1.yaml  SkiPCC_Vector_parms.json  brain_storming.ipynb  (+5 more)
(+54 files in other folders)
