[project]
name = "sensetrack"
description = "Tools for offset-tracking and preprocessing of remote sensing datasets"
authors = [
    { name = "Vincenzo Critelli", email = "vcritell@unimore.it" }
]
maintainers = [
    { name = "Vincenzo Critelli", email = "vince.crit@gmail.com" }
]
version = "1.3.1"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "geopandas>=0.13",
    "rasterio>=1.3",
    "opencv-python>=4.7",
    "scikit-image>=0.25",
    "PyYAML>=6.0",
    "tqdm>=4.65",
    "shapely>=2.0",
    "h5py>=3.8",
    "pillow>=9.5",
    "lxml>=5.0"
]
requires-python = ">= 3.10"
readme = {file = "README.md", content-type = "markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
license-files = ["LICENCE"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sensetrack*", "sensetrack/graphs/*.xml"]
where = ["."]

[tool.setuptools.package-data]
"sensetrack.graphs" = ["*.xml"]